dropshot/tests/fail/bad_trait_only1.stderr
error: method `bad_endpoint` marked as both endpoint and channel
  --> tests/fail/bad_trait_only1.rs:21:5
   |
21 | /     #[channel {
22 | |         protocol = WEBSOCKETS,
23 | |     }]
   | |______^

error: method `bad_endpoint2` marked as endpoint multiple times
  --> tests/fail/bad_trait_only1.rs:32:5
   |
32 | /     #[endpoint {
33 | |         method = GET,
34 | |         path = "/test",
35 | |     }]
   | |______^

error: method `bad_endpoint2` marked as endpoint multiple times
  --> tests/fail/bad_trait_only1.rs:36:5
   |
36 | /     #[endpoint {
37 | |         method = GET,
38 | |         path = "/test",
39 | |     }]
   | |______^

error: method `bad_channel` marked as both endpoint and channel
  --> tests/fail/bad_trait_only1.rs:47:5
   |
47 | /     #[endpoint {
48 | |         method = GET,
49 | |         path = "/test",
50 | |     }]
   | |______^

error: method `bad_channel2` marked as channel multiple times
  --> tests/fail/bad_trait_only1.rs:59:5
   |
59 | /     #[channel {
60 | |         protocol = WEBSOCKETS,
61 | |     }]
   | |______^

error: method `bad_channel2` marked as channel multiple times
  --> tests/fail/bad_trait_only1.rs:62:5
   |
62 | /     #[channel {
63 | |         protocol = WEBSOCKETS,
64 | |     }]
   | |______^
